fixed the issue of navigation bar not being visible before scrolling up

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -79,7 +79,7 @@ body.night-mode h2 {
 
 .nav-bar {
     position: fixed;
-    top: -300px;
+    
     left: 0;
     width: 100%;
     background-color: #133667;
