--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -34,5 +34,6 @@
 
     .layer-transparency{
         background-color: rgba(0, 0, 0, 0.527);
+        margin-top: 65px;
     }
 }
